refining and mobile test

--- a/index.html
+++ b/index.html
@@ -6,23 +6,42 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>AG | Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:100,400,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,400,500,600,700" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
     <script src="js/particles.js"></script>
 </head>
 <body>
     <div class="wrapper-1">
         <div id="particles"></div>
-        <div class="navbar">navbar</div>
+        <div class="navbar">
+            <h3>
+                A <div>|</div> G</div>
+            </h3>
         <div class="landing">
             <h1 class="name">Aleksandar Gjoreski</h1>
             <h2 class="profession">FRONT-END <div>|</div> BACK-END <div>|</div> FULL STACK</h2>
+            <img src="./media/other/arrowDown.svg">
         </div>
+        <a id="arrow" href="#section-2"></a>
     </div>
     
-    <div class="wrapper-2">
-        <div class="mask-2"></div>
-        <div class="about">about</div>
+    <div id="section-2" class="wrapper-2">
+        <div class="about">
+            <h1>About</h1>
+            <h5>
+                    Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor 
+                    incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                    quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.
+            </h5>
+            <img src="./media/other/arrowDown.svg">
+            <a id="arrow" href="#section-3" style="background: black;"></a>
+        </div>
+    </div>
+
+    <div id="section-3" class="wrapper-3">
+        <div class="title">
+            <h1>My Works</h1>
+        </div>
         <div class="projects">
             <div class="project ddreamkol">
                 <div class="p_name"></div>
@@ -33,12 +52,12 @@
             <div class="project login">
                 <div class="p_name"></div>
             </div>
-            <div class="project"></div>
-            <div class="project"></div>
-            <div class="project"></div>
-            <div class="project"></div>
-            <div class="project"></div>
+            <div class="project news"></div>
+            <div class="project codepen"></div>
         </div>
     </div>
+    <footer>2018 - Aleksandar Gjoreski</footer>
+    
+    <script src="./js/script.js"></script>
 </body>
 </html>
