refining and mobile test (edit)

--- a/index.html
+++ b/index.html
@@ -15,27 +15,26 @@
         <div id="particles"></div>
         <div class="navbar">
             <h3>
-                A <div>|</div> G</div>
+                A <div>|</div> G
             </h3>
+        </div>
         <div class="landing">
             <h1 class="name">Aleksandar Gjoreski</h1>
             <h2 class="profession">FRONT-END <div>|</div> BACK-END <div>|</div> FULL STACK</h2>
-            <img src="./media/other/arrowDown.svg">
+            <img src="./media/other/arrowDown.svg" />
         </div>
         <a id="arrow" href="#section-2"></a>
     </div>
     
     <div id="section-2" class="wrapper-2">
-        <div class="about">
             <h1>About</h1>
             <h5>
                     Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor 
                     incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
                     quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.
             </h5>
-            <img src="./media/other/arrowDown.svg">
-            <a id="arrow" href="#section-3" style="background: black;"></a>
-        </div>
+            <img src="./media/other/arrowDownBlack.svg">
+            <a id="arrow" href="#section-3"></a>
     </div>
 
     <div id="section-3" class="wrapper-3">
