--- a/index.html
+++ b/index.html
@@ -40,23 +40,12 @@
     </div>
     
     <div id="section-2" class="wrapper-2">
-        <div class="background">
-            <img src="./media/prog_lang/html.svg" >
-            <img src="./media/prog_lang/css.svg" >
-            <img src="./media/prog_lang/illustrator.svg" >
-            <img src="./media/prog_lang/reactjs.svg" >
-            <img src="./media/prog_lang/redux.svg" >
-            <img src="./media/prog_lang/javascript.svg" >
-            <img src="./media/prog_lang/p5js.png" >
-            <img src="./media/prog_lang/processing.png" >
-            <img src="./media/prog_lang/nodejs.png" >
-        </div>
         <h1 class="title"><span>About</span></h1>
         <div class="about-me">
             <div class="main-info">
                 <div class="card">
                     <a href="media/other/portrait.webp" class="alex-box" gallery-alex-box="myGallery">
-                        <img src="./media/other/portrait.webp" width="200" alt="Mypic" >
+                        <img src="./media/other/portrait.gif" width="200" alt="Mypic" >
                     </a>
                     <div class="lower">
                         <h4>Nationality: <span>Macedonian</span></h4>
@@ -72,7 +61,7 @@
                     I've always been fascinated by computers and what they can do so 3 years after my highschool graduation
                     I started attending the Computer Science course at the University of Trento.<br>
                     In my spare time I love to do sport, especially playing football, which i play in a team,tennis and pretty much all kinds of sport.
-                    I also love coding, I usuallymake small projects by myself in order to improve my skills and to have some fun.<br>
+                    I also love coding, I usually make small projects by myself in order to improve my skills and to have some fun.<br>
                     When i don't play football and i don't code,I like watching movies, reading and drawing, perhaps sleeping and eating too.
             </h5>
             <div class="other">
@@ -86,57 +75,121 @@
     </div>
 
     <div id="section-3" class="wrapper-3">
-        <h1 class="title"><span>My Works</span></h1>
-        <div class="projects"><!--
-            <div class="project ddreamkol">
-                <div class="details"></div>
-            </div>
-            <div class="project lightbox">
-                <div class="details"></div>
-            </div>
-            <div class="project login">
-                <div class="details"></div>
-            </div>
-            <div class="project news"></div>
-            <div class="project codepen"></div>
-        </div>-->
-
+        <h1 class="title"><span>Recent Works</span></h1>
+        <div class="projects">
         <div class="scene">
             <div class="carousel">
                 <div class="carousel__cell">
-                <div class="project ddreamkol">
-                    <div class="details"></div>
-                </div>
-                </div>
-                <div class="carousel__cell">
-                    <div class="project lightbox">
-                    <div class="details"></div>
-                </div>
-                </div>
-                <div class="carousel__cell">
-                    <div class="project login">
-                        <div class="details"></div>
-                    </div>
-                </div>
-                <div class="carousel__cell">
-                    <div class="project login">
-                        <div class="details"></div>
-                    </div>
-                </div>
-                <div class="carousel__cell">
-                    <div class="project login">
-                        <div class="details"></div>
-                    </div>
-                </div>
-                <div class="carousel__cell">
-                    <div class="project login">
+                    <div class="project">
+                        <div class="mask ddreamkol"></div>
                         <div class="details">
-                            <a href="#">
-                                <div class="demo"></div>
+                            <a href="http://80.211.7.75:3000">
+                                <div class="demo">
+                                    Live / Demo
+                                </div>
                             </a>
-                            <a href="#">
-                                    <div class="github"></div>
-                                </a>
+                            <a href="https://github.com/alezen9/DDreamkol">
+                                <div class="github">
+                                    Code on Github
+                                </div>
+                            </a>
+                        </div>
+                        <div class="lang">
+                            <img src="./media/prog_lang/html.svg">
+                            <img src="./media/prog_lang/css.svg">
+                            <img src="./media/prog_lang/javascript.svg">
+                            <img src="./media/prog_lang/nodejs.png">
+                            <img src="./media/prog_lang/pug.svg">
+                        </div>
+                        <div class="p_title">
+                            DDreamkol
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel__cell">
+                    <div class="project">
+                        <div class="mask lightbox"></div>
+                        <div class="details">
+                            <a href="https://alezen9.github.io/Lightbox_by_Alex/">
+                                <div class="demo">
+                                    Live / Demo
+                                </div>
+                            </a>
+                            <a href="https://github.com/alezen9/Lightbox_by_Alex">
+                                <div class="github">
+                                    Code on Github
+                                </div>
+                            </a>
+                        </div>
+                        <div class="lang">
+                            <img src="./media/prog_lang/html.svg">
+                            <img src="./media/prog_lang/css.svg">
+                            <img src="./media/prog_lang/javascript.svg">
+                        </div>
+                        <div class="p_title">
+                            Lightbox
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel__cell">
+                    <div class="project">
+                        <div class="mask login"></div>
+                        <div class="details">
+                            <a href="https://github.com/alezen9/react_authentication_basic">
+                                <div class="github">
+                                    Code on Github
+                                </div>
+                            </a>
+                        </div>
+                        <div class="lang">
+                            <img src="./media/prog_lang/css.svg">
+                            <img src="./media/prog_lang/javascript.svg">
+                            <img src="./media/prog_lang/reactjs.svg">
+                            <img src="./media/prog_lang/redux.svg">
+                            <img src="./media/prog_lang/nodejs.png">
+                            <img src="./media/prog_lang/mongodb.png">
+                        </div>
+                        <div class="p_title">
+                            Authentication
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel__cell">
+                    <div class="project">
+                        <div class="mask news"></div>
+                        <div class="details">
+                            <a href="https://github.com/alezen9/News_react_redux">
+                                <div class="github">
+                                    Code on Github
+                                </div>
+                            </a>
+                        </div>
+                        <div class="lang">
+                            <img src="./media/prog_lang/css.svg">
+                            <img src="./media/prog_lang/javascript.svg">
+                            <img src="./media/prog_lang/reactjs.svg">
+                            <img src="./media/prog_lang/redux.svg">
+                        </div>
+                        <div class="p_title">
+                            News
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel__cell">
+                    <div class="project">
+                        <div class="mask codepen"></div>
+                        <div class="details">
+                            <a href="https://codepen.io/alezen9/">
+                                <div class="codepen_btn">
+                                    Codepen Profile
+                                </div>
+                            </a>
+                        </div>
+                        <div class="lang">
+                            <img class="codepen_icon" src="./media/links/codepen-long.png">
+                        </div>
+                        <div class="p_title">
+                            Codepen
                         </div>
                     </div>
                 </div>
