smoother smooth scroll and minor fixes

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="css/carousel.css">
     <link rel="stylesheet" href="css/alexBox.min.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,300,400,500,600,700" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
-    <script src="js/particles.js"></script>
 </head>
 <body>
     <div id="section-1" class="wrapper-1">
@@ -70,7 +68,7 @@
                 </a>
             </div>
         </div>
-        <img class="arrowImage" src="./media/other/arrowDown.svg" />
+        <img class="arrowImage" src="./media/other/arrowDownBlack.svg" />
         <a id="arrow-2" class="goTo" href="#section-3"></a>
     </div>
 
@@ -205,8 +203,11 @@
     </div>
     <footer>2018 - Aleksandar Gjoreski</footer>
     
-    <script src="./js/script.js"></script>
+    <script src="js/particles.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/AnimateScroll.min.js"></script>
     <script src="./js/carousel.js"></script>
     <script src="js/alexBox.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
 </body>
 </html>
