minified and minor fixes

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="format-detection" content="telephone=no">
     <title>AG | Portfolio</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/carousel.css">
+    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/carousel.min.css">
     <link rel="stylesheet" href="css/alexBox.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:100,300,400,500,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,700" rel="stylesheet">
 </head>
 <body>
     <div id="section-1" class="wrapper-1">
@@ -203,11 +204,11 @@
     </div>
     <footer>2018 - Aleksandar Gjoreski</footer>
     
-    <script src="js/particles.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
+    <script src="js/particles.min.js"></script>
     <script src="js/script.js"></script>
     <script src="js/AnimateScroll.min.js"></script>
-    <script src="./js/carousel.js"></script>
+    <script src="js/carousel.min.js"></script>
     <script src="js/alexBox.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
 </body>
 </html>
