--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="format-detection" content="telephone=no">
     <title>AG | Portfolio</title>
-    <link rel="stylesheet" href="css/style.min.css">
-    <link rel="stylesheet" href="css/carousel.min.css">
-    <link rel="stylesheet" href="css/alexBox.min.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,700" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/alexBox.min.css">
+    <link rel="stylesheet" href="css/carousel.min.css">
 </head>
 <body>
     <div id="section-1" class="wrapper-1">
@@ -37,13 +37,12 @@
         <img class="arrowImage" src="./media/other/arrowDown.svg" />
         <a id="arrow-1" class="goTo" href="#section-2"></a>
     </div>
-    
     <div id="section-2" class="wrapper-2">
         <h1 class="title"><span>About</span></h1>
         <div class="about-me">
             <div class="main-info">
                 <div class="card">
-                    <a href="media/other/portrait.webp" class="alex-box" gallery-alex-box="myGallery">
+                    <a href="media/other/portrait-large.gif" class="alex-box" gallery-alex-box="myGallery">
                         <img src="./media/other/portrait.gif" width="200" alt="Mypic" >
                     </a>
                     <div class="lower">
