--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="format-detection" content="telephone=no">
+    <link rel="shortcut icon" type="image/png" href="favicon.png"/>
     <title>AG | Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="css/style.min.css">
