--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         <div class="mask login"></div>
                         <div class="details">
                             <a href="https://github.com/alezen9/react_authentication_basic">
-                                <div class="github">
+                                <div class="single_btn">
                                     Code on Github
                                 </div>
                             </a>
@@ -158,7 +158,7 @@
                         <div class="mask news"></div>
                         <div class="details">
                             <a href="https://github.com/alezen9/News_react_redux">
-                                <div class="github">
+                                <div class="single_btn">
                                     Code on Github
                                 </div>
                             </a>
@@ -176,10 +176,30 @@
                 </div>
                 <div class="carousel__cell">
                     <div class="project">
+                        <div class="mask facerecognition"></div>
+                        <div class="details">
+                            <a href="https://github.com/alezen9/Face_Recognition">
+                                <div class="single_btn">
+                                    Code on Github
+                                </div>
+                            </a>
+                        </div>
+                        <div class="lang">
+                            <img src="./media/prog_lang/reactjs.svg">
+                            <img src="./media/prog_lang/css.svg">
+                            <img src="./media/prog_lang/clarifai.png">
+                        </div>
+                        <div class="p_title">
+                            Face Recognition
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel__cell">
+                    <div class="project">
                         <div class="mask codepen"></div>
                         <div class="details">
                             <a href="https://codepen.io/alezen9/">
-                                <div class="codepen_btn">
+                                <div class="single_btn">
                                     Codepen Profile
                                 </div>
                             </a>
@@ -206,6 +226,6 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
     <script src="js/particles.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js"></script>
 </body>
 </html>
