fixed dark background on card hover

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                         <h4>Phone: <span>+39 340 894 76 41</span></h4>
                     </div>
                 </div>
+                <div class="mask"></div>
             </div>
             <h5 class="about">
                     I’m a 25 years old IT student from the mountainous place of Bocenago, Italy. I've been living here
@@ -226,6 +227,6 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
     <script src="js/particles.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js"></script>
 </body>
 </html>
