added OAuth passport.js project

--- a/index.html
+++ b/index.html
@@ -107,6 +107,28 @@
                 </div>
                 <div class="carousel__cell">
                     <div class="project">
+                        <div class="mask passportjs"></div>
+                        <div class="details">
+                            <a href="https://github.com/alezen9/Passport.js-Oauth">
+                                <div class="single_btn">
+                                    Code on Github
+                                </div>
+                            </a>
+                        </div>
+                        <div class="lang">
+                            <img src="./media/prog_lang/nodejs.png">
+                            <img src="./media/prog_lang/css.svg">
+                            <img src="./media/prog_lang/ejs.png">
+                            <img src="./media/prog_lang/passportjs.png">
+                            <img src="./media/prog_lang/mongodb.png">
+                        </div>
+                        <div class="p_title">
+                            OAuth
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel__cell">
+                    <div class="project">
                         <div class="mask lightbox"></div>
                         <div class="details">
                             <a href="https://alezen9.github.io/Lightbox_by_Alex/">
