added 2 more projects

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/png" href="favicon.png"/>
     <title>AG | Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,700" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/alexBox.min.css">
     <link rel="stylesheet" href="css/carousel.min.css">
 </head>
@@ -65,7 +65,7 @@
                     When i don't play football and i don't code,I like watching movies, reading and drawing, perhaps sleeping and eating too.
             </h5>
             <div class="other">
-                <a href="./media/other/AGResume.pdf" download>
+                <a href="./media/other/AG-Resume.pdf" download>
                     <button type="button">Download Resume</button>
                 </a>
             </div>
@@ -103,6 +103,31 @@
                         </div>
                         <div class="p_title">
                             DDreamkol
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel__cell">
+                    <div class="project">
+                        <div class="mask passportjs"></div>
+                        <div class="details">
+                            <a href="https://net-ninja-mario-plan-84b3d.firebaseapp.com">
+                                <div class="demo">
+                                    Live / Demo
+                                </div>
+                            </a>
+                            <a href="https://github.com/alezen9/Project_planner">
+                                <div class="github">
+                                    Code on Github
+                                </div>
+                            </a>
+                        </div>
+                        <div class="lang">
+                            <img src="./media/prog_lang/reactjs.svg">
+                            <img src="./media/prog_lang/redux.svg">
+                            <img src="./media/prog_lang/firebase.png">
+                        </div>
+                        <div class="p_title">
+                            Project Planner
                         </div>
                     </div>
                 </div>
@@ -150,6 +175,30 @@
                         </div>
                         <div class="p_title">
                             Lightbox
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel__cell">
+                    <div class="project">
+                        <div class="mask lightbox"></div>
+                        <div class="details">
+                            <a href="https://www.npmjs.com/package/lightbox-alex-react">
+                                <div class="demo" style="background: rgba(207, 55, 55, 0.925);">
+                                    See it on NPM
+                                </div>
+                            </a>
+                            <a href="https://github.com/alezen9/lightbox-alex-react">
+                                <div class="github">
+                                    Code on Github
+                                </div>
+                            </a>
+                        </div>
+                        <div class="lang">
+                            <img src="./media/prog_lang/reactjs.svg">
+                            <img src="./media/prog_lang/css.svg">
+                        </div>
+                        <div class="p_title">
+                            Lightbox for React
                         </div>
                     </div>
                 </div>
