carousel swipe fix

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/png" href="favicon.png"/>
     <title>AG | Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,700" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="css/alexBox.min.css">
     <link rel="stylesheet" href="css/carousel.min.css">
 </head>
