--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
                 <div class="mask"></div>
             </div>
             <h5 class="about">
-                I’m a 25 years old IT student from the mountainous place of Bocenago, Italy. I've been living here
-                since I was 6. <br>
+                I’m a 26 years old IT student from the mountainous place of Bocenago, Italy. <br>
                 I have few years of working experience in various positions in a building company but
                 I've always been fascinated by computers and what they can do so 3 years after my highschool graduation
                 I started attending the Computer Science course at the University of Trento.<br>
+                I am currently working as a Frontend developer for a company based in Rome, Italy.
                 In my spare time I love to do sport, especially playing football, which i play in a team,tennis and
                 pretty much all kinds of sport.
                 I also love coding, I usually make small projects by myself in order to improve my skills and to have
